test/mulberry/Language/const_object_mutable_receiver_error.mulberry
# RUN: not mulberry-driver -dump=mlir %s 2>&1 | FileCheck %s

fn main(): UInt64 {
  const values: List<UInt64> = list.from([1, 2, 3]);
  return values.push(4);
}

# CHECK: error: cannot use readonly object as mutable reference
